--- a/category_1.html
+++ b/category_1.html
@@ -2,50 +2,108 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>САЛАТЫ</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ваши дополнительные стили -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
-    <h1>САЛАТЫ</h1>
-    <nav>
-      <a href="index.html">← Назад к меню</a>
+    <nav class="navbar navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">← Назад к меню</a>
+      </div>
     </nav>
   </header>
-  <main>
-    <div class="dish-row">
-      <img src="images/Salads/Greek salad Athens/01.png" alt="Греческий салат Афины">
-      <div class="dish-info">
-        <h2>Греческий салат «Афины»</h2>
-        <p>Хрустящие огурцы и помидоры, сочный болгарский перец, луковые кольца и маслины, заправленные оливковым маслом первого отжима и лимонным соком. Завершают композицию кубики брынзы с лёгкой солоноватой ноткой.</p>
+
+  <!-- MAIN CONTENT -->
+  <main class="my-5">
+    <div class="container">
+      <h1 class="mb-4">САЛАТЫ</h1>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Карточка 1 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Salads/Greek salad Athens/01.png" class="card-img-top" alt="Греческий салат Афины">
+            <div class="card-body">
+              <h5 class="card-title">Греческий салат «Афины»</h5>
+              <p class="card-text">
+                Хрустящие огурцы и помидоры, болгарский перец, луковые кольца и маслины, с брынзой, оливковым маслом и лимонным соком.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">450 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 2 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Salads/Salad with roasted beetroot and goat's cheese/01.png"
+                 class="card-img-top" alt="Салат с печёной свёклой и козьим сыром">
+            <div class="card-body">
+              <h5 class="card-title">Салат с печёной свёклой и козьим сыром</h5>
+              <p class="card-text">
+                Запечённая свёкла на рукколе с рукколовым песто, козьим сыром, орехами пекан и бальзамическим кремом.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">520 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 3 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Salads/Chicken Caesar/01.jpeg" class="card-img-top" alt="Цезарь с курицей">
+            <div class="card-body">
+              <h5 class="card-title">Цезарь с курицей</h5>
+              <p class="card-text">
+                Листья римского салата, куриное филе, гренки, пармезан и соус «Цезарь» на основе анчоусов.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">480 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 4 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Salads/Quinoa salad with vegetables/01.jpeg" class="card-img-top" alt="Салат из киноа с овощами">
+            <div class="card-body">
+              <h5 class="card-title">Салат из киноа с овощами</h5>
+              <p class="card-text">
+                Киноа, черри, огурцы, болгарский перец, красный лук и кинза-лайм дрессинг.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">500 ₽</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="dish-price">450 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Salads/Salad with roasted beetroot and goat's cheese/01.png" alt="Салат с печёной свёклой и козьим сыром">
-      <div class="dish-info">
-        <h2>Салат с печёной свёклой и козьим сыром</h2>
-        <p>Запечённая до карамелизации свёкла на свежей рукколе с рукколовым песто, обильно посыпанная крошками козьего сыра и орехами пекан, сбрызнутая бальзамическим кремом.</p>
-      </div>
-      <div class="dish-price">520 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Salads/Chicken Caesar/01.jpeg" alt="Цезарь с курицей">
-      <div class="dish-info">
-        <h2>Цезарь с курицей</h2>
-        <p>Листья римского салата, обжаренное филе куриной грудки, домашние гренки, тёртый пармезан и фирменная соусная заправка «Цезарь» на основе анчоусов и яичного желтка.</p>
-      </div>
-      <div class="dish-price">480 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Salads/Quinoa salad with vegetables/01.jpeg" alt="Салат из киноа с овощами">
-      <div class="dish-info">
-        <h2>Салат из киноа с овощами</h2>
-        <p>Пророщенная киноа, свежие черри-помидоры, огурцы, болгарский перец, красный лук и ароматный кинза-лайм дрессинг. Идеально подходит для лёгкого и сытного перекуса.</p>
-      </div>
-      <div class="dish-price">500 ₽</div>
     </div>
   </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-light py-4">
+    <div class="container text-center">
+      <p class="mb-1">© 2025 Ресторан «Вкусняшка»</p>
+      <p class="mb-2">Тел.: +7 (123) 456-78-90 | Email: info@vkusniashka.ru</p>
+      <div>
+        <a href="#" class="me-3">Facebook</a>
+        <a href="#" class="me-3">Instagram</a>
+        <a href="#">VK</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
