--- a/category_3.html
+++ b/category_3.html
@@ -2,50 +2,115 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ОСНОВНЫЕ БЛЮДА</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ваши стили -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
-    <h1>ОСНОВНЫЕ БЛЮДА</h1>
-    <nav>
-      <a href="index.html">← Назад к меню</a>
+    <nav class="navbar navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">← Назад к меню</a>
+      </div>
     </nav>
   </header>
-  <main>
-    <div class="dish-row">
-      <img src="images/Main courses/Ribeye steak with garlic butter/01.jpeg" alt="Стейк рибай с чесночным маслом">
-      <div class="dish-info">
-        <h2>Стейк рибай с чесночным маслом</h2>
-        <p>Рибай-стейк 300 г, обжаренный до medium rare, подаётся с домашним чесночным маслом и овощным рататуем.</p>
+
+  <!-- MAIN CONTENT -->
+  <main class="my-5">
+    <div class="container">
+      <h1 class="mb-4">ОСНОВНЫЕ БЛЮДА</h1>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Карточка 1 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Main courses/Ribeye steak with garlic butter/01.jpeg"
+                 class="card-img-top" alt="Стейк рибай с чесночным маслом">
+            <div class="card-body">
+              <h5 class="card-title">Стейк рибай с чесночным маслом</h5>
+              <p class="card-text">
+                Рибай-стейк 300 г, обжаренный до medium rare, подаётся с домашним чесночным маслом и овощным рататуем.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">1450 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 2 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Main courses/Salmon in cream and caviar sauce/01.jpeg"
+                 class="card-img-top" alt="Лосось в сливочно-икорном соусе">
+            <div class="card-body">
+              <h5 class="card-title">Лосось в сливочно-икорном соусе</h5>
+              <p class="card-text">
+                Филе атлантического лосося с золотистой корочкой в сливочном соусе с красной икрой и укропом.
+                Гарнир – мини-картофель в мундире.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">1200 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 3 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Main courses/Chicken parmesan chop/01.jpeg"
+                 class="card-img-top" alt="Курино‑пармезановая отбивная">
+            <div class="card-body">
+              <h5 class="card-title">Курино‑пармезановая отбивная</h5>
+              <p class="card-text">
+                Отбивная из куриной грудки в панировке, запечённая под томатным соусом и слоями моцареллы.
+                Подаётся со спагетти в соусе песто.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">950 ₽</span>
+            </div>
+          </div>
+        </div>
+        <!-- Карточка 4 -->
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/Main courses/Classic Beef Stroganoff/01.jpeg"
+                 class="card-img-top" alt="Бефстроганов классический">
+            <div class="card-body">
+              <h5 class="card-title">Бефстроганов классический</h5>
+              <p class="card-text">
+                Тонкие полоски говядины, обжаренные с луком и грибами, тушёные в сливочно‑горчичном соусе.
+                Подаётся с картофельным пюре и маринованными огурчиками.
+              </p>
+            </div>
+            <div class="card-footer">
+              <span class="fw-bold">890 ₽</span>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="dish-price">1450 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Main courses/Salmon in cream and caviar sauce/01.jpeg" alt="Лосось в сливочно-икорном соусе">
-      <div class="dish-info">
-        <h2>Лосось в сливочно-икорном соусе</h2>
-        <p>Филе атлантического лосося, запечённое до золотистой корочки, в сливочном соусе с красной икрой и укропом. Гарнир – мини-картофель в мундире.</p>
-      </div>
-      <div class="dish-price">1200 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Main courses/Chicken parmesan chop/01.jpeg" alt="Курино-пармезановая отбивная">
-      <div class="dish-info">
-        <h2>Курино-пармезановая отбивная</h2>
-        <p>Отбивная из куриной грудки в панировке, запечённая под томатным соусом и слоями моцареллы. Подаётся со спагетти в соусе песто.</p>
-      </div>
-      <div class="dish-price">950 ₽</div>
-    </div>
-    <div class="dish-row">
-      <img src="images/Main courses/Classic Beef Stroganoff/01.jpeg" alt="Бефстроганов классический">
-      <div class="dish-info">
-        <h2>Бефстроганов классический</h2>
-        <p>Тонкие полоски говядины, обжаренные с луком и грибами, тушёные в сливочно-горчичном соусе. Pодаётся с картофельным пюре и маринованными огурчиками.</p>
-      </div>
-      <div class="dish-price">890 ₽</div>
     </div>
   </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-light py-4">
+    <div class="container text-center">
+      <p class="mb-1">© 2025 Ресторан «Вкусняшка»</p>
+      <p class="mb-2">Тел.: +7 (123) 456‑78‑90 | Email: info@vkusniashka.ru</p>
+      <div>
+        <a href="#" class="me-3">Facebook</a>
+        <a href="#" class="me-3">Instagram</a>
+        <a href="#">VK</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+```
