--- a/index.html
+++ b/index.html
@@ -1,32 +1,194 @@
-<!-- File: index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Меню ресторана</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ваши стили -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
-    <h1>Наше меню</h1>
-    <nav>
-      <ul>
-        <li><a href="category_1.html">САЛАТЫ</a></li>
-        <li><a href="category_2.html">СУПЫ</a></li>
-        <li><a href="category_3.html">ОСНОВНЫЕ БЛЮДА</a></li>
-        <li><a href="category_4.html">ДЕСЕРТЫ</a></li>
-        <li><a href="category_5.html">НАПИТКИ</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">Наше меню</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+                aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarMain">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="category_1.html">САЛАТЫ</a></li>
+            <li class="nav-item"><a class="nav-link" href="category_2.html">СУПЫ</a></li>
+            <li class="nav-item"><a class="nav-link" href="category_3.html">ОСНОВНЫЕ БЛЮДА</a></li>
+            <li class="nav-item"><a class="nav-link" href="category_4.html">ДЕСЕРТЫ</a></li>
+            <li class="nav-item"><a class="nav-link" href="category_5.html">НАПИТКИ</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
-  <main>
-    <p>Выберите категорию, чтобы просмотреть блюда.</p>
+
+  <!-- MAIN CONTENT -->
+  <main class="my-5">
+    <div class="container">
+
+      <!-- CAROUSEL -->
+      <section class="mb-5">
+        <div id="dishesCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#dishesCarousel" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#dishesCarousel" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#dishesCarousel" data-bs-slide-to="2"></button>
+          </div>
+          <div class="carousel-inner rounded">
+            <div class="carousel-item active">
+              <img src="images/Salads/Greek salad Athens/01.png" class="d-block w-100" alt="Греческий салат">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Sups/Pumpkin cream soup/01.jpeg" class="d-block w-100" alt="Крем-суп из тыквы">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Main courses/Ribeye steak with garlic butter/01.jpeg" class="d-block w-100" alt="Стейк рибай">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#dishesCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#dishesCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </section>
+
+      <!-- ACCORDION -->
+      <section>
+        <div class="accordion" id="categoriesAccordion">
+
+          <!-- Салаты -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSalads">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseSalads" aria-expanded="true" aria-controls="collapseSalads">
+                САЛАТЫ
+              </button>
+            </h2>
+            <div id="collapseSalads" class="accordion-collapse collapse show"
+                 aria-labelledby="headingSalads" data-bs-parent="#categoriesAccordion">
+              <div class="accordion-body">
+                Лёгкие и свежие салаты, где каждый ингредиент раскрывает свой вкус: от хрустящих овощей до изысканной брынзы.
+                Идеально для старта трапезы или в качестве самостоятельного лёгкого блюда.
+                <div class="mt-2">
+                  <a href="category_1.html" class="btn btn-sm btn-primary">Перейти в «Салаты»</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Супы -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSoups">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseSoups" aria-expanded="false" aria-controls="collapseSoups">
+                СУПЫ
+              </button>
+            </h2>
+            <div id="collapseSoups" class="accordion-collapse collapse"
+                 aria-labelledby="headingSoups" data-bs-parent="#categoriesAccordion">
+              <div class="accordion-body">
+                Ароматные и сытные супы: от классических бульонов до кремовых супов с трюфельным маслом.
+                Каждая ложка дарит тепло и комфорт.
+                <div class="mt-2">
+                  <a href="category_2.html" class="btn btn-sm btn-primary">Перейти в «Супы»</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Основные блюда -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingMains">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseMains" aria-expanded="false" aria-controls="collapseMains">
+                ОСНОВНЫЕ БЛЮДА
+              </button>
+            </h2>
+            <div id="collapseMains" class="accordion-collapse collapse"
+                 aria-labelledby="headingMains" data-bs-parent="#categoriesAccordion">
+              <div class="accordion-body">
+                Богатый выбор мясных и рыбных деликатесов, приготовленных с ювелирной точностью и подающихся с сезонными гарнирами.
+                Идеально для тех, кто любит сытный обед или ужин.
+                <div class="mt-2">
+                  <a href="category_3.html" class="btn btn-sm btn-primary">Перейти в «Основные блюда»</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Десерты -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingDesserts">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseDesserts" aria-expanded="false" aria-controls="collapseDesserts">
+                ДЕСЕРТЫ
+              </button>
+            </h2>
+            <div id="collapseDesserts" class="accordion-collapse collapse"
+                 aria-labelledby="headingDesserts" data-bs-parent="#categoriesAccordion">
+              <div class="accordion-body">
+                Нежные и сладкие: классическое тирамису, шоколадный фондан и другие десерты, от которых тает сердце.
+                Завершите трапезу на высокой ноте.
+                <div class="mt-2">
+                  <a href="category_4.html" class="btn btn-sm btn-primary">Перейти в «Десерты»</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Напитки -->
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingDrinks">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseDrinks" aria-expanded="false" aria-controls="collapseDrinks">
+                НАПИТКИ
+              </button>
+            </h2>
+            <div id="collapseDrinks" class="accordion-collapse collapse"
+                 aria-labelledby="headingDrinks" data-bs-parent="#categoriesAccordion">
+              <div class="accordion-body">
+                Освежающие морсы, чай, кофе и авторские коктейли — идеальное сопровождение к вашему блюду.
+                Утолите жажду вкусом.
+                <div class="mt-2">
+                  <a href="category_5.html" class="btn btn-sm btn-primary">Перейти в «Напитки»</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+    </div>
   </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-light py-4">
+    <div class="container text-center">
+      <p class="mb-1">© 2025 Ресторан «Вкусняшка»</p>
+      <p class="mb-2">Тел.: +7 (123) 456-78-90 | Email: info@vkusniashka.ru</p>
+      <div>
+        <a href="#" class="me-3">Facebook</a>
+        <a href="#" class="me-3">Instagram</a>
+        <a href="#">VK</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-<!-- Files: category pages (1–5) -->
